# ghost-sticker

./: LICENSE  README.md
board/bom/: RISC-V_20260516.xlsx
src/blinky/: CMakeLists.txt  README.md
src/blinky/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
src/blinky/src/: main.c
src/dfu_test/: README.md
src/dfu_test/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
src/dfu_test/src/: main.c
src/peripheral_lbs/: CMakeLists.txt  README.md
src/peripheral_lbs/src/: main.c
src/peripheral_uart_i2c/: README.md  prj.conf
src/peripheral_uart_i2c/src/: main.c
src/peripheral_uart_i2c_demo/: CMakeLists.txt  README.md
src/peripheral_uart_i2c_demo/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
src/peripheral_uart_i2c_demo/src/: main.c
src/peripheral_uart_i2c_edge/: CMakeLists.txt  README.md  prj.conf
src/peripheral_uart_i2c_edge/boards/: nrf54l15dk_nrf54l15_cpuapp.conf
src/peripheral_uart_i2c_edge/src/: main.cpp
src/peripheral_uart_pdm/: CMakeLists.txt  README.md  prj.conf  sysbuild.conf
src/peripheral_uart_pdm/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
src/peripheral_uart_pdm/src/: main.cpp
src/riscv_gpio/: CMakeLists.txt  README.md  prj.conf
src/riscv_gpio/remote/: prj.conf
src/riscv_gpio/remote/boards/: nrf54l15dk_nrf54l15_cpuflpr.overlay
src/riscv_gpio/remote/src/: main.c
src/riscv_gpio/src/: main.c
src/riscv_uart/: README.md  prj.conf  sysbuild.cmake
src/riscv_uart/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
src/riscv_uart/remote/: prj.conf
src/riscv_uart/remote/boards/: nrf54l15dk_nrf54l15_cpuflpr.overlay
src/riscv_uart/remote/src/: main.c
src/riscv_uart/src/: main.c
